# SanskritNova

./: .bandit  .env.example  .gitattributes  .gitignore  .prettierignore  .replit  .vercelignore  0.17.1  ALL-TESTS-PASSING-SUCCESS.md  BROWSER-TESTING-REPORT.md  CODE-CLEANUP-REPORT.md  CONTRIBUTING.md  LICENSE  Makefile  PRODUCTION-READINESS-REPORT.md  PYTEST-FINAL-FIX-REPORT.md  PYTEST-FIX-REPORT.md  README-VIRAL.md  README-old.md  README.md  comprehensive-bibliography.md  digital-knowledge-base.md  frontend-analysis.md  frontend-fixes-complete.md  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  theme-translation-improvements.md  trending-india-strategy.md  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: __init__.py  chat.py  handler.py  health.py  index.js  index.py  index_complex.py  info.py  requirements.txt  serverless.py  tracks.py  transliterate.py  vercel_handler.py
code/: __init__.py  _loader.py  agentic_rag.py  api.py  app.py  build_index.py  chunks.npy  config.py  generator.py  ingest.py  preprocess.py  rag_pipeline.py  retriever.py  search_normalization.py  vector_store.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: original-vs-current.md  project-setup-guide.md  project-structure.md  setup-guide.md  transformation-roadmap.md
docs/knowledge-base/: comprehensive-bibliography.md  comprehensive-sanskrit-library.md  digital-knowledge-base-implementation.md  digital-knowledge-base.md
docs/legacy/: README-old.md
k8s/: deployment.yaml
netlify/functions/: api.js
public/: app.js  apple-india-components.css  apple-india-styles.css  components.css  components.js  index.html  knowledge-base.html  luxury-app.js  manifest.json  styles.css  sw.js  viral-ai-page.html
public/legacy/: app.js  components.css  components.js  luxury-index.html  styles.css
public/scripts/: knowledge-base-app.js  luxury-app.js  utils.js  viral-ai-features.js  viral-interactions.js
public/scripts/apple-india/: apple-india-app.js
public/styles/: knowledge-base-styles.css  luxury-components.css  luxury-styles.css  shared-variables.css  viral-features.css
public/styles/apple-india/: apple-india-components.css  apple-india-styles.css
sanskrit_rag/: __init__.py  _loader.py  api.py  app.py  build_index.py  config.py  generator.py  ingest.py  preprocess.py  rag_pipeline.py  retriever.py
scripts/: commit-release.sh  deploy-vercel.sh  dev.py  push-main.sh  release-checks.sh  serve_public.py  test-website.sh  vercel-env-ls.sh  vercel-logs.sh  vercel-set-openrouter-model.sh
tests/: __init__.py  conftest.py  test_agentic_rag.py  test_api.py  test_api_complex.py  test_code_api.py  test_config.py  test_preprocess.py  test_retriever.py  test_search_normalization.py
