[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sanskritnova-ai"
version = "1.0.0"
description = "Sanskrit learning platform that combines a web app with the original document-RAG corpus"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Vidhi Saxena" }]
keywords = ["sanskrit", "fastapi", "openrouter", "vercel", "education", "ai", "rag"]
dependencies = [
    "fastapi>=0.116",
    "httpx>=0.28",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.4",
    "mangum>=0.17",
    "numpy>=2.0",
    "pydantic>=2.11",
    "uvicorn[standard]>=0.34"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
    "bandit>=1.8"
]
local = [
    "sentence-transformers>=3.4",
    "faiss-cpu>=1.9",
    "joblib>=1.3",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "llama-cpp-python>=0.3",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "chromadb>=1.0",
]
vector = [
    "chromadb>=1.0",
    "pinecone>=6.0",
    "sentence-transformers>=3.4",
]

[project.urls]
Homepage = "https://github.com/mangeshraut712/SanskritNova"
Repository = "https://github.com/mangeshraut712/SanskritNova"
Issues = "https://github.com/mangeshraut712/SanskritNova/issues"

[tool.hatch.build.targets.wheel]
packages = ["api", "code", "sanskrit_rag", "tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["api", "code", "sanskrit_rag", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
